Bot Edit using YOLOv8n

--- a/notebook/YOLO_classification.ipynb
+++ b/notebook/YOLO_classification.ipynb
@@ -40,59 +40,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 'cosmetics', 1: 'nutritional', 2: 'pharmaceutical', 3: 'supplement'}\n"
+      "\n",
+      "image 1/1 g:\\Programming\\10_Academy\\Week_12\\Medical Data Ware house with object detection\\notebook\\..\\data\\Test10.jpeg: 224x224 Band_Aid 0.58, packet 0.16, book_jacket 0.08, pick 0.05, comic_book 0.03, 23.0ms\n",
+      "Speed: 3.0ms preprocess, 23.0ms inference, 0.0ms postprocess per image at shape (1, 3, 224, 224)\n",
+      "Band_Aid\n"
      ]
     }
    ],
    "source": [
-    "print(results[0].names)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_comments_from_cfg(file_path):\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        lines = file.readlines()\n",
+    "from ultralytics import YOLO\n",
     "\n",
-    "    # Remove lines starting with # or ; (ignoring leading spaces)\n",
-    "    lines = [line for line in lines if not line.strip().startswith(('#', ';'))]\n",
-    "\n",
-    "    with open(file_path, 'w') as file:\n",
-    "        file.writelines(lines)\n",
-    "\n",
-    "# Usage\n",
-    "remove_comments_from_cfg('../airflow.cfg')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_empty_lines(file_path):\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        lines = file.readlines()\n",
-    "\n",
-    "    # Remove lines that are empty or contain only whitespace\n",
-    "    lines = [line for line in lines if line.strip()]\n",
-    "\n",
-    "    with open(file_path, 'w') as file:\n",
-    "        file.writelines(lines)\n",
-    "\n",
-    "# Usage\n",
-    "remove_empty_lines('../airflow.cfg')\n"
+    "# Load the model\n",
+    "model = YOLO(\"yolo11n-cls.pt\")\n",
+    "results = model.predict(source=\"../data/Test10.jpeg\", task=\"classify\")\n",
+    "top1_index = results[0].probs.top1\n",
+    "print(results[0].names[top1_index])\n"
    ]
   }
  ],
