YOLOV8s with 50 Epoch

--- a/notebook/YOLO_classification.ipynb
+++ b/notebook/YOLO_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -48,9 +48,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 g:\\Programming\\10_Academy\\Week_12\\Medical Data Ware house with object detection\\notebook\\..\\data\\Test10.jpeg: 224x224 Band_Aid 0.58, packet 0.16, book_jacket 0.08, pick 0.05, comic_book 0.03, 23.0ms\n",
-      "Speed: 3.0ms preprocess, 23.0ms inference, 0.0ms postprocess per image at shape (1, 3, 224, 224)\n",
-      "Band_Aid\n"
+      "image 1/1 g:\\Programming\\10_Academy\\Week_12\\Medical Data Ware house with object detection\\notebook\\..\\data\\Test8.jpeg: 64x64 pharmaceutical 0.98, supplement 0.01, nutritional 0.00, cosmetics 0.00, 14.0ms\n",
+      "Speed: 3.0ms preprocess, 14.0ms inference, 0.0ms postprocess per image at shape (1, 3, 64, 64)\n",
+      "pharmaceutical\n"
      ]
     }
    ],
@@ -58,10 +58,12 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# Load the model\n",
-    "model = YOLO(\"yolo11n-cls.pt\")\n",
-    "results = model.predict(source=\"../data/Test10.jpeg\", task=\"classify\")\n",
+    "# model = YOLO(\"../models/lastx_epoch_20.pt\")\n",
+    "model = YOLO(\"../models/last_n_e_50.pt\")\n",
+    "results = model.predict(source=\"../data/Test8.jpeg\", task=\"classify\")\n",
     "top1_index = results[0].probs.top1\n",
-    "print(results[0].names[top1_index])\n"
+    "print(results[0].names[top1_index])\n",
+    "# print(results[0].probs.top1conf)"
    ]
   }
  ],
