--- a/notebook/Fine_Tune_YOLO_Classification.ipynb
+++ b/notebook/Fine_Tune_YOLO_Classification.ipynb
@@ -1916,6 +1916,35 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Interpretation of the Given Confusion Matrix**\n",
+    "\n",
+    "Let's break down the given confusion matrix:\n",
+    "\n",
+    "**Diagonal Elements**: These represent correct predictions. For example, the value 0.83 in the top-left cell indicates that 83% of the actual cosmetics images were correctly classified as cosmetics.\n",
+    "\n",
+    "**Off-Diagonal Elements**: These represent incorrect predictions. For instance, the value 0.07 in the first row, second column indicates that 7% of the actual cosmetics images were incorrectly classified as nutritional.\n",
+    "\n",
+    "**Overall Performance:**\n",
+    "\n",
+    "Based on the diagonal elements, the model performs well in classifying cosmetics, nutritional, and pharmaceutical products. However, it seems to struggle slightly with supplement and background classes.\n",
+    "\n",
+    "**Specific Observations:**\n",
+    "\n",
+    "- **Cosmetics**: The model is highly accurate in classifying cosmetics.\n",
+    "\n",
+    "- **Nutritional**: The model also performs well in classifying nutritional products.\n",
+    "\n",
+    "- **Pharmaceutical**: The model is accurate in classifying pharmaceutical products.\n",
+    "\n",
+    "- **Supplement**: The model has some confusion between supplements and background classes.\n",
+    "\n",
+    "- **Background**: The model has some confusion between background and supplement classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "br0QF896nqja"
    },
@@ -1975,6 +2004,17 @@
     "\n",
     "category=get_category_name(results)\n",
     "print (category)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Improved Model Performance with New Data**\n",
+    "\n",
+    "The fine-tuned YOLOv8s model demonstrated exceptional performance when evaluated on a new, unseen dataset. This indicates that the model has successfully generalized its learning to recognize and classify products accurately. The confusion matrix for the new dataset shows significantly higher accuracy rates across all classes, particularly for the previously challenging supplement and background categories.\n",
+    "\n",
+    "This improvement can be attributed to the rigorous training process, data augmentation techniques, and the robust architecture of YOLOv8s. The model's ability to adapt to new data and maintain high accuracy is a testament to its effectiveness in real-world product classification scenarios."
    ]
   }
  ],
