--- a/notebook/YOLO_classification.ipynb
+++ b/notebook/YOLO_classification.ipynb
@@ -49,7 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classify products"
+    "## Classify products\n",
+    "Using the fine-tuned model new images are classified that are scrapped from the telegram channel."
    ]
   },
   {
@@ -284,20 +285,6 @@
    "source": [
     "classification.classify_products(\"data/photo\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load data to PostgreSQL Database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
